# Argus

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: agent_design.md  api.md  architecture.md  deployment.md
generated_reports/: elon_musk.md
generated_reports/elon_musk/: final_report.md
generated_reports/timothy_silas/: final_report.md  quick_report.md
postman/: Argus_API.postman_collection.json
scripts/: clear_neo4j.py  export_graph.py  run_evaluate_api.py  run_evaluation.py  seed_neo4j.py  verify_setup.py
src/: config.py  main.py  worker.py
src/agent/: base.py  cancellation.py  edges.py  graph.py  state.py  supervisor.py
src/agent/nodes/: __init__.py  analyzer.py  graph_builder.py  phase_strategist.py  planner.py  query_refiner.py  risk_assessor.py  search_agent.py  search_and_analyze.py  supervisor.py  synthesizer.py  utils.py  verifier.py
src/api/: dependencies.py  graph_image.py  router.py
src/api/v1/: evaluations.py  (+4 more)
src/evaluation/: evaluator.py  llm_judge.py  metrics.py
src/graph_db/: connection.py  queries.py  schema.py  seed.py
src/models/: llm_registry.py  model_router.py  schemas.py
src/services/: cache_service.py  checkpoint_service.py  evaluation_service.py  graph_service.py  research_service.py
src/utils/: exceptions.py  logging.py  rate_limiter.py  retry.py  text_processing.py
tests/: conftest.py
tests/e2e/: test_full_research.py
tests/integration/: test_api.py  test_neo4j.py  test_supervisor_graph.py
ui/: README.md  app.py  requirements.txt
ui/lib/: api.py  sse.py
(+37 files in other folders)
