[project]
name = "argus"
version = "0.1.0"
description = "Argus — Autonomous AI OSINT investigation agent"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "langgraph>=1.0.10",
    "langgraph-checkpoint-redis>=0.3.6",
    "langchain-openai>=1.1.9",
    "langchain-tavily>=0.2.17",
    "langsmith>=0.7.9",
    "neo4j>=6.1.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "celery[redis]>=5.4.0",
    "redis>=5.2.1",
    "httpx>=0.28.0",
    "beautifulsoup4>=4.13.0",
    "trafilatura>=2.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "structlog>=25.1.0",
    "sse-starlette>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
    "httpx",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
